manifests/machineosbuilder/machineosconfig-validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "machineosconfig-name-check"
spec:
  failurePolicy: Fail
  matchConstraints:
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
    - apiGroups:   ["machineconfiguration.openshift.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE"]
      resources:   ["machineosconfigs"]
      scope: "Cluster"
  validations:
  - expression: "object.metadata.name == object.spec.machineConfigPool.name"
    message: "MachineOSConfig metadata.name must equal spec.machineConfigPool.name; can only have one MachineOSConfig per MachineConfigPool"
    reason: Invalid
  - expression: "has(object.metadata.name) && object.metadata.name != ''"
    message: "object.metadata.name is required and cannot be empty"
    reason: Invalid
